Add 'ChangeProfilePictureComponent' and 'SetAdminRoleComponent' components

--- a/client/src/app/core/shared/home/home.component.html
+++ b/client/src/app/core/shared/home/home.component.html
@@ -176,4 +176,5 @@
   </div>
   <angular-editor [(ngModel)]="htmlContent" [config]="config"></angular-editor>
   <div class="html">{{htmlContent}}</div>
+  <div [innerHTML]="htmlContent"></div>
 </main>
