--- a/client/src/app/core/shared/navbar/navbar.component.html
+++ b/client/src/app/core/shared/navbar/navbar.component.html
@@ -32,6 +32,8 @@
             <a class="dropdown-item" routerLink="/auth/changePicture">Change Profile Picture</a>
             <ng-template [ngIf]="isAdmin()">
               <a class="dropdown-item" routerLink="/auth/setToAdmin">Set To Admin Role</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" routerLink="/post/create">Create Post</a>
             </ng-template>
             <div class="dropdown-divider"></div>
             <button class="dropdown-item" (click)="logout()">Logout</button>
