--- a/client/src/app/core/post/edit-post/edit-post.component.html
+++ b/client/src/app/core/post/edit-post/edit-post.component.html
@@ -15,7 +15,7 @@
       </angular-editor>
     </div>
     <div class="form-group">
-      <input type="submit" class="btn btn-outline-primary" value="Post" [disabled]="f.invalid" />
+      <input type="submit" class="btn btn-outline-success" value="Edit" [disabled]="f.invalid" />
     </div>
   </form>
 </main>
