--- a/client/src/app/core/auth/set-admin-role/set-admin-role.component.html
+++ b/client/src/app/core/auth/set-admin-role/set-admin-role.component.html
@@ -6,7 +6,7 @@
           <div class="form-group">
             <label for="users">Name</label>
             <select class="form-control" id="users" name="users" id="users" #users="ngModel" ngModel required>
-              <option *ngFor="let user of users$ | async" [value]="user._id">{{user.firstName}} {{user.lastName}}</option>
+              <option *ngFor="let user of (users$ | async); let i = index;" [value]="user._id" selected="{{i === 0}}">{{user.firstName}} {{user.lastName}}</option>
             </select>
           </div>
           <div class="form-group">
