--- a/client/src/app/core/post/post/post.component.css
+++ b/client/src/app/core/post/post/post.component.css
@@ -1,3 +1,11 @@
 .profile-picture {
   max-width: 100px;
 }
+
+.comment {
+  margin-bottom: 20px;
+}
+
+.comment-content {
+  border: 1px solid black;
+}
