--- a/client/src/app/core/post/post/post.component.html
+++ b/client/src/app/core/post/post/post.component.html
@@ -1,50 +1,62 @@
 <main id="main" class="container">
-  <ng-template [ngIf]="isAuthor">
+  <ng-template [ngIf]="isAuthorOnPost">
     <div class="row">
       <div class="col-md-10">
         <h1>{{post.title}}</h1>
         <small>{{post.creationDate | date: 'longDate'}}</small>
       </div>
-      <div class="col-md-2">
-        <a routerLink='/post/edit/{{post._id}}'><span class="fas fa-edit"></span></a>
+      <div class="col-md-2" id="author-icons">
+        <a routerLink="/post/edit/{{post._id}}"><span class="fas fa-edit"></span></a>
+        <a routerLink="/post/delete/{{post._id}}"><span class="far fa-trash-alt"></span></a>
       </div>
     </div>
   </ng-template>
-  <ng-template [ngIf]="!isAuthor">
+  <ng-template [ngIf]="!isAuthorOnPost">
     <h1>{{post.title}}</h1>
     <small>{{post.creationDate | date: 'longDate'}}</small>
   </ng-template>
   <div [innerHTML]="post.content | safe: 'html'"></div>
-  <hr />
-  <div style="border: 1px solid yellowgreen;">
-    <h3>About author:</h3>
-    <div class="media">
-      <img src="{{post.author.profilePicture}}" alt="{{post.author.firstName}} {{post.author.lastName}}"
-        class="profile-picture align-self-start mr-3" />
-      <div class="media-body">
-        <h6 class="mt-0">{{post.author.firstName}} {{post.author.lastName}}
-        </h6>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores odit distinctio, ex architecto illo nobis
-        maxime quibusdam quis veniam voluptates sequi et aspernatur ea quos odio totam error dolores voluptate?
-        Nulla libero est alias consequuntur ducimus autem assumenda dolorem facilis nobis exercitationem officiis qui
-        recusandae rerum hic id debitis, ipsa velit sequi deleniti itaque repudiandae aspernatur. At odit odio id?
-        Voluptas minus, est optio modi saepe non dolore! Culpa ipsa quo magni ducimus. Officia quis vel, magni at,
-        adipisci cum, quod ab delectus odit consequatur est mollitia vero nam. Iste?
+  <ng-template ngIf="hasAuthorInfo()">
+    <hr />
+    <div class="author">
+      <h3>About author:</h3>
+      <div class="media">
+        <img src="{{post.author.profilePicture}}" alt="{{post.author.firstName}} {{post.author.lastName}}"
+          class="profile-picture align-self-start mr-3" />
+        <div class="media-body">
+          <h6 class="mt-0">{{post.author.firstName}} {{post.author.lastName}}
+          </h6>
+          {{post.author.info}}
+        </div>
       </div>
     </div>
-  </div>
-  <hr />
-  <div class="row">
+  </ng-template>
+  <ng-template [ngIf]="post.comments.length > 0">
+    <hr />
+  </ng-template>
+  <div class="row" *ngFor="let comment of post.comments">
     <div class="col-md-8">
-      <div class="media comment" *ngFor="let comment of post.comments">
+      <div class="media comment">
         <img src="{{comment.author.profilePicture}}" class="align-self-center mr-3"
           alt="{{comment.author.firstName}} {{comment.author.lastName}}" style="max-width: 50px">
         <div class="media-body">
-          <h5 class="mt-0">{{comment.author.firstName}} {{comment.author.lastName}} writes on {{comment.creationDate | date: 'longDate'}}:</h5>
+          <h5 class="mt-0">{{comment.author.firstName}} {{comment.author.lastName}} writes on
+            {{comment.creationDate | date: 'longDate'}}:</h5>
           <div class="comment-content" [innerHTML]="comment.content | safe: 'html'"></div>
         </div>
       </div>
     </div>
+    <ng-template [ngIf]="isAuthorOnComment(comment)">
+      <div class="col-md-4" id="comment-icons">
+        <a routerLink="/comment/edit/{{comment._id}}"><span class="fas fa-edit"></span></a>
+        <a routerLink="/comment/delete/{{comment._id}}"><span class="far fa-trash-alt"></span></a>
+      </div>
+    </ng-template>
+    <ng-template [ngIf]="!isAuthorOnComment(comment) && isAuthorOnPost">
+      <div class="col-md-4" id="comment-icons">
+        <a routerLink="/"><span class="far fa-trash-alt"></span></a>
+      </div>
+    </ng-template>
   </div>
   <hr />
   <ng-template [ngIf]="canShowCommentForm()">
@@ -55,7 +67,7 @@
         </angular-editor>
       </div>
       <div class="form-group">
-        <input type="submit" class="btn btn-outline-primary" value="Post" [disabled]="f.invalid" />
+        <input type="submit" class="btn btn-outline-primary" value="Post Comment" [disabled]="f.invalid" />
       </div>
     </form>
   </ng-template>
