--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -6,3 +6,12 @@ html, body {
   min-height: calc(100% - 176px);
   margin: 20px auto;
 }
+
+.info-box {
+  background-color: #f5f5f5;
+  border-radius: 15px;
+  padding: 15px;
+  -webkit-box-shadow: 0px 2px 3px 1px rgba(175,175,175,0.6);
+	-moz-box-shadow: 0px 2px 3px 1px rgba(175,175,175,0.6);
+	box-shadow: 0px 2px 3px 1px rgba(175,175,175,0.6);
+}
