--- a/client/src/app/core/auth/add-info/add-info.component.html
+++ b/client/src/app/core/auth/add-info/add-info.component.html
@@ -7,7 +7,7 @@
       </angular-editor>
     </div>
     <div class="form-group">
-      <input type="submit" class="btn btn-outline-primary" value="Add info" [disabled]="f.invalid" />
+      <input type="submit" class="btn btn-outline-primary" value="Add info" [disabled]="!hasValue" />
     </div>
   </form>
 </main>
