--- a/client/src/app/core/auth/signin/signin.component.html
+++ b/client/src/app/core/auth/signin/signin.component.html
@@ -5,16 +5,47 @@
       <form #f="ngForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" name="email" #email="ngModel" ngModel required pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$" placeholder="name@example.com">
+          <input type="email" class="form-control" id="email" name="email" #email="ngModel" ngModel required
+            pattern='^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+            placeholder="name@example.com">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" name="password" #password="ngModel" ngModel required minlength="5" placeholder="*****">
+          <input type="password" class="form-control" id="password" name="password" #password="ngModel" ngModel required
+            pattern="^[A-Za-z\d]{5,}$" placeholder="*****">
         </div>
         <div class="form-group">
           <input type="submit" class="btn btn-outline-primary" value="Sign In" [disabled]="f.invalid" />
         </div>
       </form>
+    </div>
+    <div class="col-md-6">
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"
+        *ngIf="email?.touched && email?.errors?.required">
+        Email is required!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="email?.errors?.pattern">
+        Email must be in format - name@example.com
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"
+        *ngIf="password?.touched && password?.errors?.required">
+        Password is required!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="password?.errors?.pattern">
+        Password must be at least 5 characters long, containing only letters and digit!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
     </div>
   </div>
 </main>
