--- a/client/src/app/core/auth/signup/signup.component.html
+++ b/client/src/app/core/auth/signup/signup.component.html
@@ -5,28 +5,103 @@
       <form #f="ngForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="first-name">First name</label>
-          <input type="text" class="form-control" id="first-name" name="firstName" #firstName="ngModel" ngModel required minlength="4" placeholder="Ivan">
+          <input type="text" class="form-control" id="first-name" name="firstName" #firstName="ngModel" ngModel required
+            pattern="[A-Z][a-z]{2,}" placeholder="Ivan">
         </div>
         <div class="form-group">
           <label for="last-name">Last name</label>
-          <input type="text" class="form-control" id="last-name" name="lastName" #lastName="ngModel" ngModel required minlength="4"  placeholder="Ivanov">
+          <input type="text" class="form-control" id="last-name" name="lastName" #lastName="ngModel" ngModel required
+            pattern="[A-Z][a-z]{2,}" placeholder="Ivanov">
         </div>
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" name="email" #email="ngModel" ngModel required pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$" placeholder="name@example.com">
+          <input type="email" class="form-control" id="email" name="email" #email="ngModel" ngModel required
+            pattern='^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+            placeholder="name@example.com">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" name="password" #password="ngModel" ngModel required minlength="5" placeholder="*****">
+          <input type="password" class="form-control" id="password" name="password" #password="ngModel" ngModel required
+            pattern="^[A-Za-z\d]{5,}$" placeholder="*****">
         </div>
         <div class="form-group">
           <label for="confirm-password">Confirm Password</label>
-          <input type="password" class="form-control" id="confirm-password" name="confirmPassword" #confirmPassword="ngModel" ngModel required minlength="5" placeholder="*****">
+          <input type="password" class="form-control" id="confirm-password" name="confirmPassword"
+            #confirmPassword="ngModel" ngModel required pattern="^[A-Za-z\d]{5,}$" placeholder="*****">
         </div>
         <div class="form-group">
-          <input type="submit" class="btn btn-outline-primary" value="Sign Up" />
+          <input type="submit" class="btn btn-outline-primary" value="Sign Up"
+            [disabled]="f.invalid || password?.value !== confirmPassword?.value" />
         </div>
       </form>
+    </div>
+    <div class="col-md-6">
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"
+        *ngIf="firstName?.touched && firstName?.errors?.required">
+        First name is required!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="firstName?.errors?.pattern">
+        First name must start with capital letter and must be at least 3 characters long
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"
+        *ngIf="lastName?.touched && lastName?.errors?.required">
+        Last name is required!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="lastName?.errors?.pattern">
+        Last name must start with capital letter and must be at least 3 characters long
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"
+        *ngIf="email?.touched && email?.errors?.required">
+        Email is required!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="email?.errors?.pattern">
+        Email must be in format - name@example.com
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"
+        *ngIf="password?.touched && password?.errors?.required">
+        Password is required!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="password?.errors?.pattern">
+        Password must be at least 5 characters long, containing only letters and digit!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"
+        *ngIf="confirmPassword?.touched && confirmPassword?.errors?.required">
+        Confirm Password is required!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"
+        *ngIf="password?.value !== confirmPassword?.value">
+        Passwords must match!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
     </div>
   </div>
 </main>
