--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -15,3 +15,15 @@ html, body {
 	-moz-box-shadow: 0px 2px 3px 1px rgba(175,175,175,0.6);
 	box-shadow: 0px 2px 3px 1px rgba(175,175,175,0.6);
 }
+
+input.ng-valid {
+  border-left: 5px solid #42A948; /* green */
+}
+
+input.ng-invalid.ng-touched {
+  border-left: 5px solid #A94442; /* red */
+}
+
+input[type=submit]:disabled {
+  cursor: not-allowed;
+}
