--- a/client/src/app/core/shared/navbar/navbar.component.html
+++ b/client/src/app/core/shared/navbar/navbar.component.html
@@ -7,9 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <form class="form-inline my-2 my-lg-0" #f="ngForm" (ngSubmit)="onSubmit()">
+          <input class="form-control mr-sm-2" id="search-field" type="search" placeholder="Search" name="search" aria-label="Search" #search="ngModel"
+            ngModel required>
+          <input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Search" [disabled]="f.invalid">
         </form>
       </li>
     </ul>
