--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -17,13 +17,17 @@ html, body {
 }
 
 input.ng-valid {
-  border-left: 5px solid #42A948; /* green */
+  border-left: 5px solid #42A948;
 }
 
 input.ng-invalid.ng-touched {
-  border-left: 5px solid #A94442; /* red */
+  border-left: 5px solid #A94442;
 }
 
 input[type=submit]:disabled {
   cursor: not-allowed;
+}
+
+.blog-post > a, .blog-post-title > a {
+  color: black;
 }
