--- a/client/src/app/core/shared/home/home.component.html
+++ b/client/src/app/core/shared/home/home.component.html
@@ -1,50 +1,21 @@
 <main id="main" class="container">
   <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
     <div class="col-md-6 px-0">
-      <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
-      <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently
-        about what’s most interesting in this post’s contents.</p>
-      <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+      <h1 class="display-4 font-italic">Discussion Blog</h1>
+      <p class="lead my-3">Programming newsletter is a comprehensive summary of the day's most important blog posts and
+        news articles from the best Programming websites on the web</p>
     </div>
   </div>
+  <h3>Top 2 liked posts</h3>
   <div class="row mb-2">
-    <div class="col-md-6">
+    <div class="col-md-6" *ngFor="let post of topTwoLikedPosts">
       <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-primary">World</strong>
-          <h3 class="mb-0">Featured post</h3>
-          <div class="mb-1 text-muted">Nov 12</div>
-          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
-            additional content.</p>
-          <a href="#" class="stretched-link">Continue reading</a>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
-            preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-              dy=".3em">Thumbnail</text>
-          </svg>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">Design</strong>
-          <h3 class="mb-0">Post title</h3>
-          <div class="mb-1 text-muted">Nov 11</div>
-          <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.
-          </p>
-          <a href="#" class="stretched-link">Continue reading</a>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
-            preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-              dy=".3em">Thumbnail</text>
-          </svg>
+          <h3 class="mb-0">{{post.title}}</h3>
+          <div class="mb-1 text-muted">{{post.creationDate | date: 'longDate'}} by {{post.author.firstName}}
+            {{post.author.lastName}}</div>
+          <p class="card-text mb-auto" [innerHTML]="post.shortContent | safe: 'html'"></p>
+          <a routerLink="/post/{{post._id}}" class="stretched-link">Continue reading</a>
         </div>
       </div>
     </div>
@@ -64,7 +35,9 @@
             {{post.author.firstName}} {{post.author.lastName}}
           </ng-template>
         </p>
-        <a routerLink="/post/{{post._id}}"><div [innerHTML]="shortContents[i] | safe: 'html'"></div></a>
+        <a routerLink="/post/{{post._id}}">
+          <div [innerHTML]="shortContents[i] | safe: 'html'"></div>
+        </a>
         <ng-template [ngIf]="i !== length - 1">
           <hr />
         </ng-template>
@@ -96,9 +69,9 @@
       <div class="p-4">
         <h4 class="font-italic">Elsewhere</h4>
         <ol class="list-unstyled">
-          <li><a href="https://github.com/kraskoo/">GitHub</a></li>
-          <li><a href="https://twitter.com/">Twitter</a></li>
-          <li><a href="https://facebook.com">Facebook</a></li>
+          <li><a href="https://github.com/kraskoo/" target="_blank">GitHub</a></li>
+          <li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
+          <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
         </ol>
       </div>
     </aside>
