--- a/client/src/app/core/post/archive-posts/archive-posts.component.html
+++ b/client/src/app/core/post/archive-posts/archive-posts.component.html
@@ -1,5 +1,5 @@
 <main id="main" class="container">
-    <h1>Searched results for `{{date | archiveDate}}`</h1>
+    <h1>Posts in {{date | archiveDate}}</h1>
     <div class="row">
       <div class="col-md-8 blog-main">
         <h3 class="pb-4 mb-4 font-italic border-bottom">
