1. Add AboutComponent 2. Add documentation

--- a/client/src/app/core/shared/navbar/navbar.component.html
+++ b/client/src/app/core/shared/navbar/navbar.component.html
@@ -6,10 +6,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>
       <li class="nav-item">
         <form class="form-inline my-2 my-lg-0" #f="ngForm" (ngSubmit)="onSubmit()">
-          <input class="form-control mr-sm-2" id="search-field" type="search" placeholder="Search" name="search" aria-label="Search" #search="ngModel"
-            ngModel required>
+          <input class="form-control mr-sm-2" id="search-field" type="search" placeholder="Search" name="search"
+            aria-label="Search" #search="ngModel" ngModel required>
           <input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Search" [disabled]="f.invalid">
         </form>
       </li>
