--- a/client/src/app/core/post/create-post/create-post.component.html
+++ b/client/src/app/core/post/create-post/create-post.component.html
@@ -44,7 +44,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="!hasValidValue">
+      <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="f?.controls.content?.touched && !hasValidValue">
         Content must be at least 50 characters!
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
