--- a/client/src/app/core/post/edit-post/edit-post.component.html
+++ b/client/src/app/core/post/edit-post/edit-post.component.html
@@ -1,21 +1,57 @@
 <main id="main" class="container">
   <h1>Edit Post</h1>
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="title">Title: </label>
-      <input type="text" class="form-control" id="title" name="title" [(ngModel)]="title" required minlength="5" />
+  <div class="row">
+    <div class="col-md-9">
+      <form #f="ngForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="title">Title: </label>
+          <input type="text" class="form-control" id="title" name="title" [(ngModel)]="title" required minlength="10" />
+        </div>
+        <div class="form-group">
+          <label for="date">Date: </label>
+          <input type="date" class="form-control" id="date" name="date" [ngModel]="date | date: 'yyyy-MM-dd'"
+            required />
+        </div>
+        <div class="form-group">
+          <label for="editor">Content: </label>
+          <angular-editor [(ngModel)]="htmlContent" [config]="config" name="content" #content="ngModel" ngModel
+            required>
+          </angular-editor>
+        </div>
+        <div class="form-group">
+          <input type="submit" class="btn btn-outline-success" value="Edit" [disabled]="f.invalid || !hasValidValue" />
+        </div>
+      </form>
     </div>
-    <div class="form-group">
-      <label for="date">Date: </label>
-      <input type="date" class="form-control" id="date" name="date" [ngModel]="date | date: 'yyyy-MM-dd'" required />
+    <div class="col-md-3">
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"
+        *ngIf="f?.controls.title?.touched && f?.controls.title?.errors?.required">
+        Title is required!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"
+        *ngIf="f?.controls.title?.errors?.minlength">
+        Title should have at least 10 characters!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"
+        *ngIf="f?.controls.date?.touched && f?.controls.date?.errors?.required">
+        Date is required!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"
+        *ngIf="f?.controls.content?.touched && !hasValidValue">
+        Content must be at least 50 characters!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="editor">Content: </label>
-      <angular-editor [(ngModel)]="htmlContent" [config]="config" name="content" #content="ngModel" ngModel required>
-      </angular-editor>
-    </div>
-    <div class="form-group">
-      <input type="submit" class="btn btn-outline-success" value="Edit" [disabled]="f.invalid || !hasValidValue" />
-    </div>
-  </form>
+  </div>
 </main>
