--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,10 +1,18 @@
 html, body {
   height: calc(100% - 3px);
+  background-color: #e0e0e0;
 }
 
 #main {
   min-height: calc(100% - 176px);
   margin: 20px auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #f5f5f5;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5);
 }
 
 .info-box {
@@ -28,6 +36,16 @@ input[type=submit]:disabled {
   cursor: not-allowed;
 }
 
-.blog-post > a, .blog-post-title > a {
+.inner-content {
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 10px;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+}
+
+.inner-content > a, .blog-post-title > a {
   color: black;
 }
