--- a/client/src/app/core/post/searched-posts/searched-posts.component.html
+++ b/client/src/app/core/post/searched-posts/searched-posts.component.html
@@ -2,7 +2,7 @@
   <h1>Searched results for `{{search}}`</h1>
   <div class="row">
     <div class="col-md-8 blog-main">
-      <div class="blog-post" *ngFor="let post of posts; let i = index; let length = count;">
+      <div class="inner-content" *ngFor="let post of posts; let i = index; let length = count;">
         <h2 class="blog-post-title"><a routerLink="/post/{{post._id}}">{{post.title}}</a></h2>
         <p class="blog-post-meta">{{post.creationDate | date: 'longDate'}} by
           <ng-template [ngIf]="post.author.info !== ''">
@@ -15,7 +15,7 @@
         <a routerLink="/post/{{post._id}}">
           <div [innerHTML]="shortContents[i] | safe: 'html'"></div>
         </a>
-        <ng-template [ngIf]="i !== length - 1">
+        <ng-template [ngIf]="i >= length">
           <hr />
         </ng-template>
       </div>
