--- a/client/src/app/core/shared/footer/footer.component.css
+++ b/client/src/app/core/shared/footer/footer.component.css
@@ -1,11 +1,15 @@
 .footer {
 	width: 100%;
 	height: 60px;
-	background-color: #f8f8f8;
+	background-color: cadetblue;
 	border-top: 2px solid #e7e7e7;
 }
 
+.footer > .container {
+	margin-top: 20px;
+}
+
 .footer > .container > .text-muted {
-	color: #777;
+	color: whitesmoke !important;
 	margin: 20px 0;
 }
