--- a/client/src/app/core/shared/home/home.component.html
+++ b/client/src/app/core/shared/home/home.component.html
@@ -1,4 +1,4 @@
-<main id="main" class="container">
+<main id="main" class="container main-background">
   <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
     <div class="col-md-6 px-0">
       <h1 class="display-4 font-italic">Discussion Blog</h1>
@@ -7,8 +7,8 @@
     </div>
   </div>
   <h3>Top 2 liked posts</h3>
-  <div class="row mb-2">
-    <div class="col-md-6" *ngFor="let post of topTwoLikesPosts">
+  <div class="row mb-2 flex">
+    <div class="col-md-6 inner-content side-padding" *ngFor="let post of topTwoLikesPosts">
       <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
           <h3 class="mb-0">{{post.title}}</h3>
@@ -22,7 +22,7 @@
   </div>
   <div class="row">
     <div class="col-md-8 blog-main">
-      <div class="blog-post" *ngFor="let post of (posts | sortPosts: 'author._id'); let i = index; let length = count;">
+      <div class="inner-content" *ngFor="let post of (posts | sortPosts: 'author._id'); let i = index; let length = count;">
         <h2 class="blog-post-title"><a routerLink="/post/{{post._id}}">{{post.title}}</a></h2>
         <p class="blog-post-meta">{{post.creationDate | date: 'longDate'}} by
           <ng-template [ngIf]="post.author.info !== ''">
@@ -35,24 +35,24 @@
         <a routerLink="/post/{{post._id}}">
           <div [innerHTML]="post.shortContent | safe: 'html'"></div>
         </a>
-        <ng-template [ngIf]="i !== length - 1">
+        <ng-template [ngIf]="i >= length">
           <hr />
         </ng-template>
       </div>
     </div>
     <aside class="col-md-4 blog-sidebar">
-      <div class="p-4 mb-3 bg-light rounded">
+      <div class="p-4 mb-3 bg-light rounded inner-content">
         <h4 class="font-italic">About</h4>
         <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet
           fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
       </div>
-      <div class="p-4">
+      <div class="p-4 inner-content">
         <h4 class="font-italic">Archives</h4>
         <ol class="list-unstyled mb-0">
           <li *ngFor="let archive of archives"><a routerLink="{{archive.value}}">{{archive.key | archiveDate}}</a></li>
         </ol>
       </div>
-      <div class="p-4">
+      <div class="p-4 inner-content">
         <h4 class="font-italic">Elsewhere</h4>
         <ol class="list-unstyled">
           <li><a href="https://github.com/kraskoo/" target="_blank">GitHub</a></li>
