--- a/client/src/app/core/post/archive-posts/archive-posts.component.html
+++ b/client/src/app/core/post/archive-posts/archive-posts.component.html
@@ -21,12 +21,12 @@
         </div>
       </div>
       <aside class="col-md-4 blog-sidebar">
-        <div class="p-4 mb-3 bg-light rounded">
+        <div class="p-4 mb-3 bg-light rounded inner-content">
           <h4 class="font-italic">About</h4>
           <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet
             fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
         </div>
-        <div class="p-4">
+        <div class="p-4 mb-3 bg-light rounded inner-content">
           <h4 class="font-italic">Elsewhere</h4>
           <ol class="list-unstyled">
             <li><a href="https://github.com/kraskoo/">GitHub</a></li>
