--- a/client/src/app/core/shared/home/home.component.html
+++ b/client/src/app/core/shared/home/home.component.html
@@ -46,13 +46,13 @@
         <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet
           fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
       </div>
-      <div class="p-4 inner-content">
+      <div class="p-4 mb-3 bg-light rounded inner-content">
         <h4 class="font-italic">Archives</h4>
         <ol class="list-unstyled mb-0">
           <li *ngFor="let archive of archives"><a routerLink="{{archive.value}}">{{archive.key | archiveDate}}</a></li>
         </ol>
       </div>
-      <div class="p-4 inner-content">
+      <div class="p-4 mb-3 bg-light rounded inner-content">
         <h4 class="font-italic">Elsewhere</h4>
         <ol class="list-unstyled">
           <li><a href="https://github.com/kraskoo/" target="_blank">GitHub</a></li>
