--- a/client/src/app/core/shared/navbar/navbar.component.css
+++ b/client/src/app/core/shared/navbar/navbar.component.css
@@ -26,3 +26,11 @@
 .navbar-brand {
   padding-top: 0 !important;
 }
+
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(245,245,245,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar-light .navbar-toggler {
+  border-color: whitesmoke;
+}
