--- a/client/src/app/core/post/archive-posts/archive-posts.component.html
+++ b/client/src/app/core/post/archive-posts/archive-posts.component.html
@@ -1,39 +1,14 @@
 <main id="main" class="container">
-    <h1>Posts in {{date | archiveDate}}</h1>
-    <div class="row">
-      <div class="col-md-8 blog-main">
-        <div class="inner-content" *ngFor="let post of posts; let i = index; let length = count;">
-          <h2 class="blog-post-title"><a routerLink="/post/{{post._id}}">{{post.title}}</a></h2>
-          <p class="blog-post-meta">{{post.creationDate | date: 'longDate'}} by
-            <ng-template [ngIf]="post.author.info !== ''">
-              <a routerLink="/auth/info/{{post.author._id}}">{{post.author.firstName}} {{post.author.lastName}}</a>
-            </ng-template>
-            <ng-template [ngIf]="post.author.info === ''">
-              {{post.author.firstName}} {{post.author.lastName}}
-            </ng-template>
-          </p>
-          <a routerLink="/post/{{post._id}}">
-            <div [innerHTML]="post.shortContent | safe: 'html'"></div>
-          </a>
-          <ng-template [ngIf]="i >= length">
-            <hr />
-          </ng-template>
-        </div>
+  <h1>Posts in {{date | archiveDate}}</h1>
+  <hr />
+  <div class="row">
+    <div class="col-md-8 blog-main">
+      <div class="inner-content" *ngFor="let post of posts; let i = index; let length = count;">
+        <resume-post [post]="post"></resume-post>
       </div>
-      <aside class="col-md-4 blog-sidebar">
-        <div class="p-4 mb-3 bg-light rounded inner-content">
-          <h4 class="font-italic">About</h4>
-          <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet
-            fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-        </div>
-        <div class="p-4 mb-3 bg-light rounded inner-content">
-          <h4 class="font-italic">Elsewhere</h4>
-          <ol class="list-unstyled">
-            <li><a href="https://github.com/kraskoo/">GitHub</a></li>
-            <li><a href="https://twitter.com/">Twitter</a></li>
-            <li><a href="https://facebook.com">Facebook</a></li>
-          </ol>
-        </div>
-      </aside>
     </div>
-  </main>
+    <aside class="col-md-4 blog-sidebar">
+      <right-side-common></right-side-common>
+    </aside>
+  </div>
+</main>
