--- a/client/src/app/core/post/searched-posts/searched-posts.component.html
+++ b/client/src/app/core/post/searched-posts/searched-posts.component.html
@@ -1,7 +1,11 @@
 <main id="main" class="container">
   <h1>Searched results for `{{search}}`</h1>
+  <hr />
   <div class="row">
     <div class="col-md-8 blog-main">
+      <ng-template [ngIf]="posts.length === 0">
+        <h3>No results has been found.</h3>
+      </ng-template>
       <div class="inner-content" *ngFor="let post of posts; let i = index; let length = count;">
         <h2 class="blog-post-title"><a routerLink="/post/{{post._id}}">{{post.title}}</a></h2>
         <p class="blog-post-meta">{{post.creationDate | date: 'longDate'}} by
@@ -21,19 +25,7 @@
       </div>
     </div>
     <aside class="col-md-4 blog-sidebar">
-      <div class="p-4 mb-3 bg-light rounded">
-        <h4 class="font-italic">About</h4>
-        <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet
-          fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-      </div>
-      <div class="p-4">
-        <h4 class="font-italic">Elsewhere</h4>
-        <ol class="list-unstyled">
-          <li><a href="https://github.com/kraskoo/">GitHub</a></li>
-          <li><a href="https://twitter.com/">Twitter</a></li>
-          <li><a href="https://facebook.com">Facebook</a></li>
-        </ol>
-      </div>
+      <right-side-common></right-side-common>
     </aside>
   </div>
 </main>
