--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -49,3 +49,7 @@ input[type=submit]:disabled {
 .inner-content > a, .blog-post-title > a {
   color: black;
 }
+
+.angular-editor-wrapper, .angular-editor-toolbar, .info-box {
+  background-color: white !important;
+}
