--- a/client/src/app/core/post/searched-posts/searched-posts.component.html
+++ b/client/src/app/core/post/searched-posts/searched-posts.component.html
@@ -3,25 +3,11 @@
   <hr />
   <div class="row">
     <div class="col-md-8 blog-main">
-      <ng-template [ngIf]="shortContents.length === 0">
+      <ng-template [ngIf]="extendedPosts.length === 0">
         <h3>No results for the search.</h3>
       </ng-template>
-      <div class="inner-content" *ngFor="let post of posts | async as asyncPosts; let i = index; let length = count;">
-        <h2 class="blog-post-title"><a routerLink="/post/{{post._id}}">{{post.title}}</a></h2>
-        <p class="blog-post-meta">{{post.creationDate | date: 'longDate'}} by
-          <ng-template [ngIf]="post.author.info !== ''">
-            <a routerLink="/auth/info/{{post.author._id}}">{{post.author.firstName}} {{post.author.lastName}}</a>
-          </ng-template>
-          <ng-template [ngIf]="post.author.info === ''">
-            {{post.author.firstName}} {{post.author.lastName}}
-          </ng-template>
-        </p>
-        <a routerLink="/post/{{post._id}}">
-          <div [innerHTML]="shortContents[i] | safe: 'html'"></div>
-        </a>
-        <ng-template [ngIf]="i >= length">
-          <hr />
-        </ng-template>
+      <div class="inner-content" *ngFor="let post of extendedPosts; let i = index; let length = count;">
+        <resume-post [post]="post"></resume-post>
       </div>
     </div>
     <aside class="col-md-4 blog-sidebar">
