--- a/client/src/app/core/auth/change-profile-picture/change-profile-picture.component.html
+++ b/client/src/app/core/auth/change-profile-picture/change-profile-picture.component.html
@@ -12,7 +12,7 @@
         <div class="form-group">
         </div>
         <div class="form-group">
-          <input type="submit" class="btn btn-outline-primary" value="Change" [disabled]="f.invalid" />
+          <input type="submit" class="btn btn-outline-primary" value="Change" [disabled]="isInvalid || form.invalid" />
         </div>
       </form>
     </div>
