--- a/client/src/app/core/shared/top-two-liked/top-two-liked.component.html
+++ b/client/src/app/core/shared/top-two-liked/top-two-liked.component.html
@@ -1,7 +1,7 @@
 <h3>Top 2 liked posts</h3>
 <hr />
 <div class="row mb-2 flex">
-  <div class="col-md-6 inner-content side-padding" *ngFor="let post of topTwoLikesPosts">
+  <div class="col-xl-6 col-12 inner-content side-padding" *ngFor="let post of topTwoLikesPosts">
     <resume-liked-post [post]="post"></resume-liked-post>
   </div>
 </div>
